header spacing fix

--- a/libraries/css/main.css
+++ b/libraries/css/main.css
@@ -61,12 +61,7 @@ body {
     padding-bottom: 0px;
 }
 .top {
-    width: 100%;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 10px;
     height: 90px;
-    padding-top: 0px;
 }
 .bottom {
     display:block;
